Add Bamboo ENG and add link to index page

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@ p {
   font-family: Asar;
 }
 
+.lang {
+  text-align: right;
+}
+
 @media (max-width: 1024px) {
   #me {
     background-size: 7em 7em;
