--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,13 @@ a > * {
 
 h4 {
   font-family: Mina;
-  margin-bottom: 1em;
 }
-
+/* 
 p {
+  font-family: Asar;
+} */
+
+h5, h6 {
   font-family: Asar;
 }
 
